fix block filling browser with overflow:scroll

--- a/Coding/Portfolio/projects.css
+++ b/Coding/Portfolio/projects.css
@@ -1,5 +1,6 @@
 html, body {
     height: 100%;
+    min-height: 100%;
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
   }
@@ -23,6 +24,7 @@ html, body {
     align-items: center;
     width: 100%;
     height: 100%;
+    overflow: scroll;
   }
 
   .project-flex-container > div { 
